
Name: Segue ChangeLog



v. 1.3.7 (2005-05-10) 
----------------------------------------------------
		
    * Bug Fix:  (Adam Franco) 
    fixed config parameter checking to look for new whitelist parameter.
		
    * Bug Fix:  (Alex Chapin) 
    Fixed class-membership printing.
	

v. 1.3.6 (2005-05-06) 
----------------------------------------------------
		
    **** IMPORTANT *** Change: 
    Segue &lt; 1.3.6 contains a critical security hole which allows the upload of
    php scripts with the .phtml extension to the userfiles directory. It is
    critical that you either update Segue to version 1.3.6 or greater AND/OR
    edit your Apache configuration (httpd.conf) to prevent Apache from passing
    thehandling of .phtml files to PHP.
		
    * Bug Fix:  (Adam Franco) 
    File over-writes are now properly logged.
		
    * Bug Fix:  (Adam Franco) 
    Log view now displays actions of user accounts that have been deleted.
		
    * Bug Fix:  (Adam Franco) 
    White-listing or black-listing of files by extension is now availible.
    White-listing is the default. Please update your config from 
	

v. 1.3.5 (2005-04-27) 
----------------------------------------------------
		
    * Bug Fix:  (Adam Franco) 
    Session variables now properly unset after editing stories.
		
    * Bug Fix:  (Alex Chapin) 
    Editors can now be removed using discussion editor UI. (This bug was
    introducedin version 1.3.4)
		
    * Bug Fix:  (Alex Chapin) 
    Fixed hide author bug so that authors in all discussions are not hidden to
    unauthenticatedusers.
	

v. 1.3.4 (2005-04-18) 
----------------------------------------------------
		
    * Change: #1185237  (Adam Franco) 
    Default page now focuses to username field.
		
    * Bug Fix: #1177195  (Alex Chapin) 
    Discussion feedback now show site owner instead of addedby user	
		
    * Bug Fix: #1177199  (Alex Chapin) 
    Hide authors now works for both authenticated and unauthenticated users	
		