@@ -10,6 +10,10 @@
 		 (<i>Adam Franco</i>)
 		<li/> Bug Fix:
 	 
+			Fixed whitelist to not allow substrings to trigger validity.
+		 (<i>Adam Franco</i>)
+		<li/> Bug Fix:
+	 
 			Fixed class-membership printing.
 		 (<i>Alex Chapin</i>)
 	</ul><br/><h2>Version 1.3.6</h2><h3>2005-05-06</h3><ul>
